--- a/10660/Clase 7ac2/index.html
+++ b/10660/Clase 7ac2/index.html
@@ -7,8 +7,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-giJF6kkoqNQ00vy+HMDP7azOuL0xtbfIcaT9wjKHr8RbDVddVHyTfAAsrekwKmP1" crossorigin="anonymous">
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
-    <script src="./src/js/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/jquery-validation@1.19.3/dist/jquery.validate.min.js"></script>
+    <script src="./src/js/main.js"></script>
 
 </head>
 <body>
@@ -18,8 +18,8 @@
             <div class="col-sm-4">
                 <form name="searchForm">
                     <div class="form-group">
-                        <label>Buscar</label>
-                        <input type="text" name="search" class="form-control" placeholder="Buscar">
+                        <label for='search'>Buscar</label>
+                        <input id='search' type="text" name="search" class="form-control" placeholder="Buscar">
                     </div>
                     <button type="submit" class="btn btn-primary">Buscar</button>
                 </form>
@@ -42,7 +42,7 @@
                     </button>
                 </div>
                 <div class="modal-body">
-                    <img id="thumbnail">
+                    <img id="thumbnail" alt="thumbnail">
                     <p class="description"></p>
                 </div>
             </div>
